--- a/express/login.html
+++ b/express/login.html
@@ -42,7 +42,7 @@
                 const username = document.getElementById('username_log').value;
                 const password = document.getElementById('password_log').value;
 
-                const result = await fetch('/api/login', {
+                const result = await fetch('/login', {
 
                     method: 'POST',
                     headers: {
